2014-01-19  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* stat_kernel.tcl: Corrected use of bandwidth
	* statistics.test: Added margin per kernel - not quite satisfactory in the case of the uniform kernel

2014-01-18  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* statistics.tcl: Added stat_kernel.tcl
	* stat_kernel.tcl: Implements a straightforward kernel density estimation procedure
	* statistics.man: Describe the kernel denstity estimation procedure, moved the description of several
	                  tests to the general section
	* statistics.test: Added three tests for the kernel density estimation (note: one result is a bit troublesome)
	* pkgIndex.tcl: Bumped version of statistics package to 0.9

2013-12-20  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* interpolate.tcl: [Ticket 843c2257d2] Added special case for points coincident with the data points
	* interpolate.test: [Ticket 843c2257d2] Added test case for coincident points

2013-12-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* decimal.man: Fixed missing requirement of the package
	* machineparameters.man: itself.

2013-11-03  Arjen Markus <arjenmarkus@users.sourceforge.net>

	* calculus.tcl: Corrected calculation of corrector in heunStep (now version 0.7.2)
	* pkgIndex.tcl: [Ticket b25b826973] Bumped version of interpolate to 1.1
	* interpolate.tcl: [Ticket b25b826973] Corrected inconsistency in use of tables for 1D interpolation
	* interpolate.test: [Ticket b25b826973] Adjusted the test for 1D interpolation
	* interpolate.man: [Ticket b25b826973] Added an example for 1D interpolation and note on the
	                   incompatibility

2013-03-05  Arjen Markus <arjenmarkus@users.sourceforge.net>

	* statistics.tcl: [Ticket 05d055c2f5]: Added weights to histogram
	* statistics.man: [Ticket 05d055c2f5]: Documented weights to histogram
	* statistics.test: [Ticket 05d055c2f5]: Added test for weights to histogram