@@ -1,5 +1,5 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin math::geometry n 1.1.2]
+[manpage_begin math::geometry n 1.1.3]
 [keywords angle]
 [keywords distance]
 [keywords line]
@@ -14,7 +14,7 @@
 [titledesc {Geometrical computations}]
 [category  Mathematics]
 [require Tcl [opt 8.3]]
-[require math::geometry [opt 1.1.2]]
+[require math::geometry [opt 1.1.3]]
 
 [description]
 [para]
@@ -202,13 +202,28 @@ first and last points of the line segment
 [call [cmd ::math::geometry::calculateDistanceToPolyline] [arg P] [arg polyline]]
 
 Calculate the distance of point P to the polyline and
-return the result.
+return the result. Note that a polyline needs not to be closed.
 
 [list_begin arguments]
 [arg_def list P] List of two numbers, the coordinates of the point
 
 [arg_def list polyline] List of numbers, the coordinates of the
 vertices of the polyline
+[list_end]
+
+[para]
+
+[call [cmd ::math::geometry::calculateDistanceToPolygon] [arg P] [arg polygon]]
+
+Calculate the distance of point P to the polygon and
+return the result. If the list of coordinates is not closed (first and last
+points differ), it is automatically closed.
+
+[list_begin arguments]
+[arg_def list P] List of two numbers, the coordinates of the point
+
+[arg_def list polygon] List of numbers, the coordinates of the
+vertices of the polygon
 [list_end]
 
 [para]
@@ -281,7 +296,8 @@ upwards)
 [call [cmd ::math::geometry::lineSegmentsIntersect] [arg linesegment1] [arg linesegment2]]
 
 Check if two line segments intersect or coincide. Returns 1 if that is
-the case, 0 otherwise (in two dimensions only).
+the case, 0 otherwise (in two dimensions only). If an endpoint of one segment lies on
+the other segment (or is very close to the segment), they are considered to intersect
 
 [list_begin arguments]
 [arg_def list linesegment1] First line segment
